--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div>
-  <app-todo-list></app-todo-list>
+  <app-header></app-header>
+  <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
