--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,3 +1,4 @@
-<app-todo-item *ngFor="let todo of todos" [todo]="todo">
-    <li>{{ todo.title }}</li>
+<app-add-todo (addTodo)='addTodo($event)'></app-add-todo>
+<app-todo-item *ngFor="let todo of todos" [todo]="todo" (deleteTodo)="deleteTodo($event)">
+
 </app-todo-item>
