--- a/src/app/components/add-todo/add-todo.component.html
+++ b/src/app/components/add-todo/add-todo.component.html
@@ -1,4 +1,5 @@
 <form class="form" (ngSubmit)="onSubmit()">
-    <input type="text" name="title" [(ngModel)]="title" placeholder="Add Todo..." />
+    <input type="text" name="title" [(ngModel)]="title" placeholder="Add Todo Title..." />
+    <input type="text" name="description" [(ngModel)]="description" placeholder="Add Todo Description..." />
     <input type="submit" value="submit" class="btn" />
 </form>
